--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@ input {
     border: 2px solid white;
     border-radius: 5px;
     text-align: center;
+    width: 80%;
+    max-width: 300px;
 }
 
 button {
